[package]
name = "super-analyzer"
version = "0.4.0-dev"
authors = [
    "Iban Eguia <razican@protonmail.ch>",
    "Jaime Salas <jaimesr@protonmail.ch>",
    "Bruno Pin <brunoop@protonmail.ch>",
    "Sergio de los Dolores <sergiodlo@protonmail.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/SUPERAndroidAnalyzer/super"
homepage = "http://superanalyzer.rocks"
description = """\
Secure, Unified, Powerful and Extensible Rust Android Analyzer. Core software\
with CLI.\
"""
keywords = ["Android", "security", "audit", "super", "analyzer"]
categories = ["command-line-utilities", "development-tools"]
build = "build.rs"

[[bin]]
name = "super"

[dependencies]
clap = "^2.21"
colored = "^1.4"
xml-rs = "0.4"
serde = "^0.9"
serde_json = "^0.9"
chrono = { version = "^0.3", features = ["serde"] }
toml = "^0.3"
regex = "^0.2"
lazy_static = "^0.2"
rustc-serialize = "^0.3"
open = "^1.2"
bytecount = "^0.1"
log = "^0.3"
env_logger = "^0.4"
error-chain = "^0.10"
md5 = "^0.3"
sha1 = "^0.2"
sha2 = "^0.4"
abxml = { git = "https://github.com/gnieto/abxml-rs.git", branch = "develop" }

[dependencies.handlebars]
version = "^0.25"
features = ["serde_type"]

[build-dependencies]
clap = "^2.21"

[features]
default = ["beta"]
beta = []
unstable = ["beta", "certificate"]
certificate = []

[package.metadata.deb]
maintainer = "Iban Eguia <razican@protonmail.ch>"
copyright = "2016, Iban Eguia <razican@protonmail.ch>"
license_file = ["LICENSE", "0"]
extended_description = """\
Secure, Unified, Powerful and Extensible Rust Android Analyzer. Core software\
with CLI."""
depends = "libc6, libgcc1, default-jre-headless, bash"
section = "devel"
priority = "optional"
assets = [
    # Executable
    ["target/release/super", "usr/bin/", "755"],
    # Completion scripts
    ["target/release/super.bash-completion", "usr/share/bash-completion/completions/", "755"],
    ["target/release/super.fish", "usr/share/fish/vendor_completions.d/", "755"],
    ["target/release/_super", "usr/share/zsh/vendor-completions/", "755"],
    # JD-CMD
    ["vendor/jd-cmd.jar", "usr/share/super/vendor/", "755"],
    ["vendor/jd-cmd.LICENSE.txt", "usr/share/super/vendor/", "644"],
    # Dex2Jar
    ["vendor/dex2jar-2.1-SNAPSHOT/LICENSE.txt", "usr/share/super/vendor/dex2jar-2.1-SNAPSHOT/", "644"],
    ["vendor/dex2jar-2.1-SNAPSHOT/NOTICE.txt", "usr/share/super/vendor/dex2jar-2.1-SNAPSHOT/", "644"],
    ["vendor/dex2jar-2.1-SNAPSHOT/d2j-dex2jar.sh", "usr/share/super/vendor/dex2jar-2.1-SNAPSHOT/", "755"],
    ["vendor/dex2jar-2.1-SNAPSHOT/d2j_invoke.sh", "usr/share/super/vendor/dex2jar-2.1-SNAPSHOT/", "755"],
    ["vendor/dex2jar-2.1-SNAPSHOT/lib/antlr-runtime-3.5.2.jar", "usr/share/super/vendor/dex2jar-2.1-SNAPSHOT/lib/", "755"],
    ["vendor/dex2jar-2.1-SNAPSHOT/lib/asm-debug-all-4.1.jar", "usr/share/super/vendor/dex2jar-2.1-SNAPSHOT/lib/", "755"],
    ["vendor/dex2jar-2.1-SNAPSHOT/lib/d2j-base-cmd-2.1-SNAPSHOT.jar", "usr/share/super/vendor/dex2jar-2.1-SNAPSHOT/lib/", "755"],
    ["vendor/dex2jar-2.1-SNAPSHOT/lib/d2j-jasmin-2.1-SNAPSHOT.jar", "usr/share/super/vendor/dex2jar-2.1-SNAPSHOT/lib/", "755"],
    ["vendor/dex2jar-2.1-SNAPSHOT/lib/d2j-smali-2.1-SNAPSHOT.jar", "usr/share/super/vendor/dex2jar-2.1-SNAPSHOT/lib/", "755"],
    ["vendor/dex2jar-2.1-SNAPSHOT/lib/dex-ir-2.1-SNAPSHOT.jar", "usr/share/super/vendor/dex2jar-2.1-SNAPSHOT/lib/", "755"],
    ["vendor/dex2jar-2.1-SNAPSHOT/lib/dex-reader-2.1-SNAPSHOT.jar", "usr/share/super/vendor/dex2jar-2.1-SNAPSHOT/lib/", "755"],
    ["vendor/dex2jar-2.1-SNAPSHOT/lib/dex-reader-api-2.1-SNAPSHOT.jar", "usr/share/super/vendor/dex2jar-2.1-SNAPSHOT/lib/", "755"],
    ["vendor/dex2jar-2.1-SNAPSHOT/lib/dex-tools-2.1-SNAPSHOT.jar", "usr/share/super/vendor/dex2jar-2.1-SNAPSHOT/lib/", "755"],
    ["vendor/dex2jar-2.1-SNAPSHOT/lib/dex-translator-2.1-SNAPSHOT.jar", "usr/share/super/vendor/dex2jar-2.1-SNAPSHOT/lib/", "755"],
    ["vendor/dex2jar-2.1-SNAPSHOT/lib/dex-writer-2.1-SNAPSHOT.jar", "usr/share/super/vendor/dex2jar-2.1-SNAPSHOT/lib/", "755"],
    ["vendor/dex2jar-2.1-SNAPSHOT/lib/dx-1.7.jar", "usr/share/super/vendor/dex2jar-2.1-SNAPSHOT/lib/", "755"],
    #CSS
    ["templates/super/css/androidstudio.css", "usr/share/super/templates/super/css/", "644"],
    ["templates/super/css/style.css", "usr/share/super/templates/super/css/", "644"],
    # Images
    ["templates/super/img/folder-icon.png", "usr/share/super/templates/super/img/", "644"],
    ["templates/super/img/java-icon.png", "usr/share/super/templates/super/img/", "644"],
    ["templates/super/img/xml-icon.png", "usr/share/super/templates/super/img/", "644"],
    ["templates/super/img/report.png", "usr/share/super/vendor/results_template/img/", "644"],
    ["templates/super/img/logo.png", "usr/share/super/templates/super/img/", "644"],
    # JavaScript
    ["templates/super/js/highlight.js.LICENSE", "usr/share/super/templates/super/js/", "644"],
    ["templates/super/js/highlight.pack.js", "usr/share/super/templates/super/js/", "644"],
    ["templates/super/js/jquery-3.2.0.slim.min.js", "usr/share/super/templates/super/js/", "644"],
    ["templates/super/js/src_nav.js", "usr/share/super/templates/super/js/", "644"],
    # templates
    ["templates/super/code.hbs", "usr/share/super/templates/super/", "644"],
    ["templates/super/report.hbs", "usr/share/super/templates/super/", "644"],
    ["templates/super/src.hbs", "usr/share/super/templates/super/", "644"],
    ["templates/super/vulnerability.hbs", "usr/share/super/templates/super/", "644"],
    # Config
    ["rules.json", "etc/super/", "644"],
    ["config.toml", "etc/super/", "644"],
    ["config.toml.sample", "etc/super/", "644"],
    # README
    ["README.md", "usr/share/doc/super/README.md", "644"],
]

# The release profile, used for `cargo build`.
[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
panic = 'unwind'

# The release profile, used for `cargo build --release`.
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'unwind'
