[package]
name = "super-analyzer"
version = "0.5.1"
authors = [
    "Iban Eguia <razican@protonmail.ch>",
    "Jaime Salas <jaimesr@protonmail.ch>",
    "Bruno Pin <brunoop@protonmail.ch>",
    "Sergio de los Dolores <sergiodlo@protonmail.com>"]
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/SUPERAndroidAnalyzer/super"
homepage = "https://superanalyzer.rocks"
description = """\
Secure, Unified, Powerful and Extensible Rust Android Analyzer. Core software\
with CLI.\
"""
keywords = ["Android", "security", "audit", "super", "analyzer"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.deb]
maintainer = "SUPER Team <contact@superanalyzer.rocks>"
copyright = "2016 - 2018, SUPER Team <contact@superanalyzer.rocks>"
license-file = ["LICENSE", "0"]
extended-description = """\
Secure, Unified, Powerful and Extensible Rust Android Analyzer. Core software\
with CLI."""
depends = "libc6, libgcc1, default-jre-headless, bash"
section = "devel"
priority = "optional"
assets = [
    # Executable
    ["target/release/super-analyzer", "usr/bin/", "755"],

    # Completion scripts
    #["target/release/super.bash", "usr/share/bash-completion/completions/", "755"],
    #["target/release/super.fish", "usr/share/fish/vendor_completions.d/", "755"],
    #["target/release/_super", "usr/share/zsh/vendor-completions/", "755"],

    # JD-CMD
    ["vendor/jd-cmd.jar", "usr/share/super-analyzer/vendor/", "755"],
    ["vendor/jd-cmd.LICENSE.txt", "usr/share/super-analyzer/vendor/", "644"],

    # Dex2Jar
    ["vendor/dex2jar-2.1-SNAPSHOT/LICENSE.txt", "usr/share/super-analyzer/vendor/dex2jar-2.1-SNAPSHOT/", "644"],
    ["vendor/dex2jar-2.1-SNAPSHOT/*.sh", "usr/share/super-analyzer/vendor/dex2jar-2.1-SNAPSHOT/", "755"],
    ["vendor/dex2jar-2.1-SNAPSHOT/lib/*", "usr/share/super-analyzer/vendor/dex2jar-2.1-SNAPSHOT/lib/", "755"],
    ["vendor/dex2jar-2.1-SNAPSHOT/bin/dex-tools", "usr/share/super-analyzer/vendor/dex2jar-2.1-SNAPSHOT/bin/", "755"],

    # Web assets
    ["templates/super/css/*", "usr/share/super-analyzer/templates/super/css/", "644"],
    ["templates/super/img/*", "usr/share/super-analyzer/templates/super/img/", "644"],
    ["templates/super/js/*", "usr/share/super-analyzer/templates/super/js/", "644"],

    # Templates
    ["templates/super/*", "usr/share/super-analyzer/templates/super/", "644"],

    # Configuration
    ["rules.json", "etc/super-analyzer/", "644"],
    ["config.toml", "etc/super-analyzer/", "644"],
    ["config.toml.sample", "etc/super-analyzer/", "644"],

    # README
    ["README.md", "usr/share/doc/super-analyzer/README.md", "644"],
]

[badges]
travis-ci = { repository = "SUPERAndroidAnalyzer/super", branch = "master" }
codecov = { repository = "SUPERAndroidAnalyzer/super", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "SUPERAndroidAnalyzer/super" }
is-it-maintained-open-issues = { repository = "SUPERAndroidAnalyzer/super" }
maintenance = { status = "experimental" }

[[bin]]
name = "super-analyzer"
path = "src/main.rs"

[lib]
name = "super_analyzer_core"
path = "src/lib.rs"

[dependencies]
failure = "0.1.3"
failure_derive = "0.1.3"
clap = "2.32.0"
xml-rs = "0.8.0"
serde = "1.0.81"
serde_derive = "1.0.81"
serde_json = "1.0.33"
chrono = { version = "0.4.6", features = ["serde"] }
toml = "0.4.10"
regex = "1.1.0"
lazy_static = "1.2.0"
open = "1.2.2"
bytecount = "0.4.0"
log = "0.4.6"
env_logger = "0.6.0"
md5 = "0.6.0"
sha1 = "0.6.0"
sha2 = "0.8.0"
abxml = "0.7.1"
handlebars = "1.1.0"
semver = "0.9.0"
hex = "0.3.2"
num_cpus = "1.8.0"
colored = "1.6.1"

[build-dependencies]
clap = "2.32.0"

[dev-dependencies]
reqwest = "0.9.5"

[features]
default = []
unstable = ["certificate"]
no-color = ["colored/no-color"]
certificate = []

# The release profile, used for `cargo build`.
[profile.dev]
incremental = true
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
overflow-checks = true
panic = 'unwind'

# The release profile, used for `cargo build --release`.
[profile.release]
incremental = false
opt-level = 3
debug = false
rpath = false
codegen-units = 1
lto = true
debug-assertions = false
overflow-checks = false
panic = 'unwind'
