[package]
name = "super-analyzer"
version = "0.5.1"
license = "GPL-3.0"
authors = [
    "Iban Eguia <razican@protonmail.ch>",
    "Jaime Salas <jaimesr@protonmail.ch>",
    "Bruno Pin <brunoop@protonmail.ch>",
    "Sergio de los Dolores <sergiodlo@protonmail.com>"]
edition = "2018"
readme = "README.md"
documentation = "https://superandroidanalyzer.github.io/super/"
repository = "https://github.com/SUPERAndroidAnalyzer/super/"
homepage = "https://superanalyzer.rocks/"
description = """\
Secure, Unified, Powerful and Extensible Rust Android Analyzer. Core software with CLI.
"""
keywords = ["Android", "security", "audit", "super", "analyzer"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.deb]
maintainer = "SUPER Team <contact@superanalyzer.rocks>"
copyright = "2016 - 2019, SUPER Team <contact@superanalyzer.rocks>"
license-file = ["LICENSE", "0"]
extended-description = """\
Secure, Unified, Powerful and Extensible Rust Android Analyzer. Core software\
with CLI."""
depends = "libc6, libgcc1, default-jre-headless, bash"
section = "devel"
priority = "optional"
assets = [
    # Executable
    ["target/release/super-analyzer", "usr/bin/", "755"],

    # Completion scripts
    ["target/release/super.bash", "usr/share/bash-completion/completions/", "755"],
    ["target/release/super.fish", "usr/share/fish/vendor_completions.d/", "755"],
    ["target/release/_super", "usr/share/zsh/vendor-completions/", "755"],

    # JD-CMD
    ["vendor/jd-cmd.jar", "usr/share/super-analyzer/vendor/", "755"],
    ["vendor/jd-cmd.LICENSE.txt", "usr/share/super-analyzer/vendor/", "644"],

    # Dex2Jar
    ["vendor/dex2jar-2.1-SNAPSHOT/LICENSE.txt", "usr/share/super-analyzer/vendor/dex2jar-2.1-SNAPSHOT/", "644"],
    ["vendor/dex2jar-2.1-SNAPSHOT/*.sh", "usr/share/super-analyzer/vendor/dex2jar-2.1-SNAPSHOT/", "755"],
    ["vendor/dex2jar-2.1-SNAPSHOT/lib/*", "usr/share/super-analyzer/vendor/dex2jar-2.1-SNAPSHOT/lib/", "755"],
    ["vendor/dex2jar-2.1-SNAPSHOT/bin/dex-tools", "usr/share/super-analyzer/vendor/dex2jar-2.1-SNAPSHOT/bin/", "755"],

    # Web assets
    ["templates/super/css/*", "usr/share/super-analyzer/templates/super/css/", "644"],
    ["templates/super/img/*", "usr/share/super-analyzer/templates/super/img/", "644"],
    ["templates/super/js/*", "usr/share/super-analyzer/templates/super/js/", "644"],

    # Templates
    ["templates/super/*", "usr/share/super-analyzer/templates/super/", "644"],

    # Configuration
    ["rules.json", "etc/super-analyzer/", "644"],
    ["config.toml", "etc/super-analyzer/", "644"],
    ["config.toml.sample", "etc/super-analyzer/", "644"],

    # README
    ["README.md", "usr/share/doc/super-analyzer/README.md", "644"],
]

[badges]
travis-ci = { repository = "SUPERAndroidAnalyzer/super", branch = "master" }
codecov = { repository = "SUPERAndroidAnalyzer/super", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "SUPERAndroidAnalyzer/super" }
is-it-maintained-open-issues = { repository = "SUPERAndroidAnalyzer/super" }
maintenance = { status = "experimental" }

[[bin]]
name = "super-analyzer"
path = "src/main.rs"

[lib]
name = "super_analyzer_core"
path = "src/lib.rs"

[dependencies]
clap = "2.33.0"
serde = { version = "1.0.104", features = ['derive'] }
serde_json = "1.0.48"
chrono = { version = "0.4.11", features = ["serde"] }
toml = "0.5.6"
regex = "1.3.4"
open = "1.3.4"
bytecount = { version = "0.6.0", features = ["runtime-dispatch-simd"] }
log = "0.4.8"
env_logger = "0.7.1"
md5 = "0.7.0"
sha1 = "0.6.0"
sha2 = "0.8.1"
abxml = "0.8.2"
handlebars = "3.0.1"
semver = "0.9.0"
hex = "0.4.2"
num_cpus = "1.12.0"
colored = "1.9.3"
once_cell = "1.3.1"
anyhow = "1.0.26"
quick-xml = "0.17.2"

[build-dependencies]
clap = "2.33.0"

[dev-dependencies]
ureq = "0.11.4"

[features]
default = []
unstable = ["certificate"]
no-color = ["colored/no-color"]
certificate = []

# The release profile, used for `cargo build`.
[profile.dev]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
rpath = false

# The release profile, used for `cargo build --release`.
[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

# The test profile, used for `cargo test`.
[profile.test]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
rpath = false

# The benchmark profile, used for `cargo bench`.
[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1
rpath = false
